update alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ input {
 	border-radius: 6px;
 	border: 2px #FF00C5 solid;
 	margin-right: 10px;
-	margin-left: 70px;
+	margin-left: 50px;
 	margin-top: 12px;
 }
 
